--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,59 @@
-lab_2/probe
-lab_4/probe
-lab_5/probe
-lab_6/probe
-lab_7/probe
+# Игнорировать файлы сборок, компилятора, линкера, и временные файлы
+*.o
+*.obj
+*.exe
+*.dll
+*.pyc
+*.out
+*.bin
+*.elf
+*.swp
+*~
+*.class
+*-exe-S
+*-exe-c
+*.c#
+*.h5
+
+# Игнорировать файлы проекта и среды разработки
+.vscode/
+.gdb_history
+.idea/
+.idea
+*.suo
+*.user
+*.sln
+*.vcxproj
+*.userprefs
+
+# Игнорировать сгенерированные файлы и логи
+bin/
+build/
+dist/
+target/
+*.log
+log/
+logs/
+
+# Игнорировать файлы окружения Python
+__pycache__/
+venv/
+env/
+*.env
+pypy/
+*.pyd
+*.pyo
+
+# Игнорировать компоненты сборки проекта
+Makefile
+\#Makefile\#
+CMakeLists.txt
+build.xml
+pom.xml
+
+# Игнорировать специфические файлы операционных систем
+.DS_Store
+
+# Рабочие папки
+/_trash
+/конспекты
